--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 <meta name="viewport" content="initial-scale=1.0, width=device, user-scalable=yes">
 <title>Comenzando con la Fotografía</title>
 <link rel="stylesheet" href="css/estilos.css">
+<link href="https://fonts.googleapis.com/css?family=Aguafina+Script" rel="stylesheet">
 </head>
 
 <body>
 <header>
-<div id=titulo>
+<div id="titulo">
  	<h1>Comenzando con la fotografía</h1>
  </div>	
- <div id=nav>
+ <div id="nav">
     <nav>
     <a href="index.html"  target="_blank"> Inicio  </a>
     <a href="Paisaje.html" target="_blank">Paisajes </a>
@@ -23,10 +24,10 @@
 
 <section>
 
-<div id=img1><img src="img/central.png"  alt=""/></div>
-<div class=contenido>
-<div id=img2><img src="img/paisaje.png"  alt=""/></div>
-<div id=img3><img src="img/retrato.png" alt=""/></div>	
+<div id="img1"><img src="img/central.png"  alt=""/></div>
+<div class="contenido">
+<div id="img2"><img src="img/paisaje.png"  alt=""/></div>
+<div id="img3"><img src="img/retrato.png" alt=""/></div>	
 </div>	
 	
 </section>
