--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="initial-scale=1.0, width=device, user-scalable=yes">
+<meta name="viewport" content="width=900px, initial-scale=1, user-salable=yes">
 <title>Comenzando con la Fotografía</title>
 <link rel="stylesheet" href="css/estilos.css">
 <link href="https://fonts.googleapis.com/css?family=Aguafina+Script" rel="stylesheet">
