organizado transform inicio

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width:device-width initial-scale=1, user-scalable=yes">
+<meta name="viewport" content="width=device-width initial-scale=1, user-scalable=yes">
 <title>Comenzando con la Fotografía</title>
 <link rel="stylesheet" href="css/estilos.css">
 <link href="https://fonts.googleapis.com/css?family=Aguafina+Script" rel="stylesheet">
@@ -32,15 +32,17 @@
 			<source media ="(min-width:900px)" srcset="img/central.png">
 			<source media ="(min-width:750px)" srcset="img/central750.png">
 			<source media ="(min-width:350px)" srcset="img/central350.png">
-			<img src="img/central750.png">
+			<img src="img/central.png">
 		</picture>
 	</div>
 
 
 
 	<div class="contenido">
-		<div id="img2"><img src="img/paisaje.png"  alt=""/></div>
-		<div id="img3"><img src="img/retrato.png" alt=""/></div>	
+		<div id="img2"><a href="paisaje.html"  target="_blank"><img src="img/paisaje.png" alt=""/></a></div>
+		
+		<div id="img3"><a href="retrato.html"  target="_blank"><img src="img/retrato.png" alt=""/></a></div>
+			
 	</div>
 
 </div>
