proceso footer y algunas mejoras en la visualizacion

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Comenzando con la Fotografía</title>
 <link rel="stylesheet" href="css/estilos.css">
 <link href="https://fonts.googleapis.com/css?family=Aguafina+Script" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
 
 <body>
