Falta direccionar email footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,29 @@
 	</div>
 
 </div>
-<footer></footer>
+<footer>
+	<div>
+				<h2>Contacto</h2>
+				<p>calle 174a No 37-35</p>
+				<p>davidpieschacon@hotmail.com</p>
+	</div>
+	<div>
+				<h2>Terminos</h2>
+				<p> Conoce nuestros terminos y condiciones</p>
+	</div>
+	<div id="redes">
+				<h2>Redes Sociales</h2>
+				<p>Comparte tus fotos</p>
+				<p><a href="https://www.facebook.com/javier.e.pieschacon" target="_blank"><img src="img/facebook.png" alt=""/>Javier Pieschacon</a></p>
+    </div>
+	<div>
+				<h2>Derechos</h2>
+				<p>Fotografia:</p>
+				<p>Javier Pieschacon</p>
+				<p>Copyright-2018</p>
+				
+	</div>
+</footer>
 
 </body>
 </html>
