--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 
 	<div class="contenido">
-		<div id="img2"><a href="paisaje.html"  target="_blank"><img src="img/paisaje.png" alt=""/></a></div>
+		<div id="img2"><a href="paisaje.html"  target="_blank"><img src="img/paisaje.png" alt=""/></a><h2>Paisajes</h2></div>
 		
-		<div id="img3"><a href="retrato.html"  target="_blank"><img src="img/retrato.png" alt=""/></a></div>
+		<div id="img3"><a href="retrato.html"  target="_blank"><img src="img/retrato.png" alt=""/></a><h2>Retratos</h2></div>
 			
 	</div>
 
@@ -66,7 +66,7 @@
 				<h2>Derechos</h2>
 				<p>Fotografia:</p>
 				<p>Javier Pieschacon</p>
-				<p>Copyright-2018</p>
+				<p>© Copyright-2018</p>
 				
 	</div>
 </footer>
