inicio pag paisajes

--- a/paisajes.html
+++ b/paisajes.html
@@ -25,24 +25,22 @@
         </ul>
  	</nav>
  </div >	 
-</header>
-
-<div class="contenedor">
-	<div id="img1">
-		<picture>
-			<source media ="(min-width:900px)" srcset="img/central.png">
-			<source media ="(min-width:750px)" srcset="img/central750.png">
-			<source media ="(min-width:350px)" srcset="img/central350.png">
-			<img src="img/central.png">
-		</picture>
-	</div>
 
 
 
-	<div class="contenido">
-		<div id="img2"><a href="paisaje.html"  target="_blank"><img src="img/paisaje.png" alt=""/></a><h2>Paisajes</h2></div>
+	<div class="galeria">
+	
+		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div id="img3"><a href="retrato.html"  target="_blank"><img src="img/retrato.png" alt=""/></a><h2>Retratos</h2></div>
+		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 			
 	</div>
 
