--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				<h2>Contacto</h2>
 				<p>calle 174a No 37-35</p>
 				<p><a href="mailto:davidpieschacon@hotmail.com"> davidpieschacon@hotmail.com</a></p>
+				<P>Cel: 316 7054863</P>
 	</div>
 	<div>
 				<h2>Terminos</h2>
