--- a/paisajes.html
+++ b/paisajes.html
@@ -26,30 +26,31 @@
  	</nav>
  </div >	 
 
-
+</header>
 
 	<div class="galeria">
 	
-		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div > <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div > <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		 
+		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
-		
-		<div ><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 			
 	</div>
 
-</div>
+
 <footer>
 	<div>
 				<h2>Contacto</h2>
 				<p>calle 174a No 37-35</p>
 				<p><a href="mailto:davidpieschacon@hotmail.com"> davidpieschacon@hotmail.com</a></p>
+				<p>Cel: 316 7054863</p>
 	</div>
 	<div>
 				<h2>Terminos</h2>
