avanzando en la organizacion  escritorio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<container>
 <header>
 <div id="titulo">
  	<h1>Comenzando con la fotografía</h1>
@@ -26,7 +27,9 @@
  	</nav>
  </div >	 
 </header>
+</container>
 
+<container>
 <div class="contenedor">
 	<div id="img1">
 		<picture>
@@ -36,23 +39,26 @@
 			<img src="img/central.png">
 		</picture>
 	</div>
-
-
+</div>
+</container>
+<container>
 
 	<div class="contenido">
-		<div id="img2"><a href="paisaje.html"  target="_blank"><img src="img/paisaje.png" alt=""/></a><h2>Paisajes</h2></div>
+		<div id="img2"><a href="paisaje.html"  target="_blank"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></a></div>
 		
-		<div id="img3"><a href="retrato.html"  target="_blank"><img src="img/retrato.png" alt=""/></a><h2>Retratos</h2></div>
+		<div id="img3"><a href="retrato.html"  target="_blank"><img src="img/retrato.png" alt=""/><h2>Retratos</h2></a></div>
 			
 	</div>
 
-</div>
+
+</container>
+<container>
 <footer>
 	<div>
 				<h2>Contacto</h2>
 				<p>calle 174a No 37-35</p>
 				<p><a href="mailto:davidpieschacon@hotmail.com"> davidpieschacon@hotmail.com</a></p>
-				<P>Cel: 316 7054863</P>
+				<p>Cel: 316 7054863</p>
 	</div>
 	<div>
 				<h2>Terminos</h2>
@@ -71,6 +77,6 @@
 				
 	</div>
 </footer>
-
+</container>
 </body>
 </html>
