--- a/paisajes.html
+++ b/paisajes.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+<container>
+
 <header>
 <div id="titulo">
  	<h1>Comenzando con la fotografía</h1>
@@ -28,23 +31,28 @@
 
 </header>
 
+</container>
+
+<container>
 	<div class="galeria">
+	<picture>
 	
-		<div > <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp1"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div > <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp2"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp3"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp4"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		 
-		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp5"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div >	<img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
-			
+		<div id="imgp6"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+	</picture>		
 	</div>
-
-
+</container>
+<container>
 <footer>
 	<div>
 				<h2>Contacto</h2>
@@ -69,6 +77,6 @@
 				
 	</div>
 </footer>
-
+</container>
 </body>
 </html>
