--- a/paisajes.html
+++ b/paisajes.html
@@ -35,8 +35,8 @@
 
 <container>
 	<div class="galeria">
-	<picture>
 	
+	<foto>
 		<div id="imgp1"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
 		<div id="imgp2"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
@@ -49,7 +49,7 @@
 		
 		<div id="imgp6"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-	</picture>		
+	</foto>	
 	</div>
 </container>
 <container>
