--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 				<h2>Redes Sociales</h2>
 				<p>Comparte tus fotos</p>
 				<p><a href="https://www.facebook.com/javier.e.pieschacon" target="_blank"><img src="img/facebook.png" alt=""/>Javier Pieschacon</a></p>
+				<p><a href="https://www.facebook.com/javier.e.pieschacon" target="_blank"><img src="img/twitter.png" alt=""/>Javier Pieschacon</a></p>
+				<p><a href="https://www.facebook.com/javier.e.pieschacon" target="_blank"><img src="img/sky.png" alt=""/>Javier Pieschacon</a></p>
     </div>
 	<div>
 				<h2>Derechos</h2>
