--- a/paisajes.html
+++ b/paisajes.html
@@ -58,7 +58,7 @@
 				<h2>Contacto</h2>
 				<p>calle 174a No 37-35</p>
 				<p><a href="mailto:davidpieschacon@hotmail.com"> davidpieschacon@hotmail.com</a></p>
-				<p>Cel: 316 7054863</p>
+				<p><img src="img/whatsapp.png" alt=""/> 316 7054863</p>
 	</div>
 	<div>
 				<h2>Terminos</h2>
