--- a/retratos.html
+++ b/retratos.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+
 <container>
+
 <header>
 <div id="titulo">
  	<h1>Comenzando con la fotografía</h1>
@@ -26,31 +28,29 @@
         </ul>
  	</nav>
  </div >	 
+
 </header>
+
 </container>
 
 <container>
-<div class="contenedor">
-	<div id="img1">
-		<picture>
-			<source media ="(min-width:900px)" srcset="img/central.png">
-			<source media ="(min-width:750px)" srcset="img/central750.png">
-			<source media ="(min-width:350px)" srcset="img/central350.png">
-			<img src="img/central.png">
-		</picture>
-	</div>
-</div>
-</container>
-<container>
-
-	<div class="contenido">
-		<div id="img2"><a href="paisaje.html"  target="_blank"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></a></div>
+	<div class="galeria">
+	
+	<foto>
+		<div id="imgp1"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
 		
-		<div id="img3"><a href="retrato.html"  target="_blank"><img src="img/retrato.png" alt=""/><h2>Retratos</h2></a></div>
-			
+		<div id="imgp2"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+		<div id="imgp3"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+		<div id="imgp4"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		 
+		<div id="imgp5"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+		<div id="imgp6"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		
+	</foto>	
 	</div>
-
-
 </container>
 <container>
 <footer>
