--- a/retratos.html
+++ b/retratos.html
@@ -37,17 +37,17 @@
 	<div class="galeria">
 	
 	<foto>
-		<div id="imgp1"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp1"> <img src="img/retrato.png" alt=""/><h2>Retratos</h2></div>
 		
-		<div id="imgp2"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp2"> <img src="img/retrato.png" alt=""/><h2>Retratos</h2></div>
 		
-		<div id="imgp3"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp3"><img src="img/retrato.png" alt=""/><h2>Retratos</h2></div>
 		
-		<div id="imgp4"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp4"><img src="img/retrato.png" alt=""/><h2>Retratos</h2></div>
 		 
-		<div id="imgp5"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp5"><img src="img/retrato.png" alt=""/><h2>Retratos</h2></div>
 		
-		<div id="imgp6"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp6"><img src="img/retrato.png" alt=""/><h2>Retratos</h2></div>
 		
 	</foto>	
 	</div>
