--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
    
      <nav>
          <ul>
-          <li><a href="index.html"  target="_blank"> Inicio  </a></li>
-          <li><a href="Paisaje.html" target="_blank">Paisajes </a></li>
-          <li><a href="Retrato.html" target="_blank">Retratos </a></li>
+          <li><a class="texto_sin" href="index.html"  target="_blank"> Inicio  </a></li>
+          <li><a href="paisajes.html" target="_blank">Paisajes </a></li>
+          <li><a href="retratos.html" target="_blank">Retratos </a></li>
         </ul>
  	</nav>
  </div >	 
@@ -32,12 +32,9 @@
 <container>
 <div class="contenedor">
 	<div id="img1">
-		<picture>
-			<source media ="(min-width:900px)" srcset="img/central.png">
-			<source media ="(min-width:750px)" srcset="img/central750.png">
-			<source media ="(min-width:350px)" srcset="img/central350.png">
+		
 			<img src="img/central.png">
-		</picture>
+		
 	</div>
 </div>
 </container>
