--- a/retratos.html
+++ b/retratos.html
@@ -15,7 +15,7 @@
 
 <header>
 <div id="titulo">
- 	<h1>Comenzando con la fotografía</h1>
+ 	<h1>Retratos</h1>
  </div>	
  <div id="nav">
          
@@ -24,7 +24,7 @@
          <ul>
           <li><a href="index.html"  target="_blank"> Inicio  </a></li>
           <li><a href="Paisaje.html" target="_blank">Paisajes </a></li>
-          <li><a href="Retrato.html" target="_blank">Retratos </a></li>
+          <li><a class="texto_sin" href="Retrato.html" target="_blank">Retratos </a></li>
         </ul>
  	</nav>
  </div >	 
