--- a/paisajes.html
+++ b/paisajes.html
@@ -15,7 +15,7 @@
 
 <header>
 <div id="titulo">
- 	<h1>Comenzando con la fotografía</h1>
+ 	<h1>Paisajes</h1>
  </div>	
  <div id="nav">
          
@@ -23,7 +23,7 @@
      <nav>
          <ul>
           <li><a href="index.html"  target="_blank"> Inicio  </a></li>
-          <li><a href="Paisaje.html" target="_blank">Paisajes </a></li>
+          <li><a class="texto_sin" href="Paisaje.html" target="_blank">Paisajes </a></li>
           <li><a href="Retrato.html" target="_blank">Retratos </a></li>
         </ul>
  	</nav>
