adaptativo para correcciones

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
    
      <nav>
          <ul>
-          <li><a class="texto_sin" href="index.html"  target="_blank"> Inicio  </a></li>
-          <li><a href="paisajes.html" target="_blank">Paisajes </a></li>
-          <li><a href="retratos.html" target="_blank">Retratos </a></li>
+          <li><a class="texto_sin" href="index.html"> Inicio  </a></li>
+          <li><a href="paisajes.html" >Paisajes </a></li>
+          <li><a href="retratos.html" >Retratos </a></li>
         </ul>
  	</nav>
  </div >	 
