--- a/paisajes.html
+++ b/paisajes.html
@@ -22,9 +22,9 @@
    
      <nav>
          <ul>
-          <li><a href="index.html"  target="_blank"> Inicio  </a></li>
-          <li><a class="texto_sin" href="Paisaje.html" target="_blank">Paisajes </a></li>
-          <li><a href="Retrato.html" target="_blank">Retratos </a></li>
+          <li><a href="index.html"> Inicio  </a></li>
+          <li><a class="texto_sin" href="Paisajes.html">Paisajes </a></li>
+          <li><a href="Retratos.html">Retratos </a></li>
         </ul>
  	</nav>
  </div >	 
@@ -35,17 +35,17 @@
 	<div class="galeria">
 	
 	<foto>
-		<div id="imgp1"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp1"> <img src="img/paisaje.png" alt=""/></div>
 		
-		<div id="imgp2"> <img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp2"> <img src="img/paisaje.png" alt=""/></div>
 		
-		<div id="imgp3"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp3"><img src="img/paisaje.png" alt=""/></div>
 		
-		<div id="imgp4"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp4"><img src="img/paisaje.png" alt=""/></div>
 		 
-		<div id="imgp5"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp5"><img src="img/paisaje.png" alt=""/></div>
 		
-		<div id="imgp6"><img src="img/paisaje.png" alt=""/><h2>Paisajes</h2></div>
+		<div id="imgp6"><img src="img/paisaje.png" alt=""/></div>
 		
 	</foto>	
 	</div>
