--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="contenedor">
 	<div id="img1">
 		
-			<img src="img/central.png">
+			<img src="img/central.png" alt="Islas del Rosario">
 		
 	</div>
 </div>
